<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/loginRelativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/materialBlue">

    <RelativeLayout
        android:id="@+id/mainScreenContentLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/emailAddressTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginNormal"
            android:layout_marginTop="@dimen/mainScreenMarginTopLarge"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:letterSpacing="0.14"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmaller"
            android:text="@string/main_screen_email_address"
            />

        <EditText
            android:id="@+id/emailAddressEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenEditTextHeight"
            android:layout_marginEnd="@dimen/marginNormal"
            android:layout_marginTop="@dimen/marginSmall"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/emailAddressTextView"
            android:paddingStart="@dimen/paddingNormal"
            android:paddingEnd="@dimen/paddingNormal"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:letterSpacing="0.11"
            android:textSize="@dimen/textSizeMiddle"
            android:inputType="textEmailAddress"
            android:background="@drawable/rounded_background_white"
            />

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/marginNormal"
            android:layout_below="@+id/emailAddressEditText"
            android:layout_marginTop="@dimen/marginNormal"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:letterSpacing="0.14"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/textSizeSmaller"
            android:text="@string/main_screen_password"
            />

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenEditTextHeight"
            android:layout_marginTop="@dimen/marginSmall"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginEnd="@dimen/marginNormal"
            android:paddingStart="@dimen/paddingNormal"
            android:paddingEnd="@dimen/paddingNormal"
            android:layout_centerHorizontal="true"
            android:textColor="@color/white"
            android:fontFamily="sans-serif"
            android:textStyle="normal"
            android:letterSpacing="0.11"
            android:textSize="@dimen/textSizeMiddle"
            android:layout_below="@+id/passwordTextView"
            android:inputType="textPassword"
            android:background="@drawable/rounded_background_white"
            />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenEditTextHeight"
            android:layout_marginTop="@dimen/marginNormal"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginEnd="@dimen/marginNormal"
            android:layout_below="@+id/passwordEditText"
            android:text="@string/main_screen_login_enter"
            android:textSize="@dimen/textSizeMiddle"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.24"
            android:textAllCaps="true"
            android:paddingStart="@dimen/paddingNormal"
            android:paddingEnd="@dimen/paddingNormal"
            android:gravity="center"
            android:background="@drawable/login_button_background"
            />

        <Button
            android:id="@+id/registerButton"
            android:layout_width="match_parent"
            android:layout_height="@dimen/mainScreenEditTextHeight"
            android:layout_marginTop="@dimen/marginNormal"
            android:layout_marginStart="@dimen/marginNormal"
            android:layout_marginEnd="@dimen/marginNormal"
            android:layout_below="@+id/loginButton"
            android:text="@string/main_screen_register_enter"
            android:textSize="@dimen/textSizeMiddle"
            android:textColor="@color/black"
            android:fontFamily="sans-serif"
            android:letterSpacing="0.24"
            android:textAllCaps="true"
            android:paddingStart="@dimen/marginNormal"
            android:paddingEnd="@dimen/marginNormal"
            android:gravity="center"
            android:background="@drawable/login_button_background"
            />
    </RelativeLayout>

    <ProgressBar
        android:id="@+id/loginProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>

    <TextView
        android:id="@+id/textViewHelp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/marginNormal"
        android:fontFamily="sans-serif"
        android:letterSpacing="0.14"
        android:text="@string/main_screen_all_right_reserved"
        android:textColor="@color/greyText"
        />

</RelativeLayout>